--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.4
 colorama==0.4.4
+coverage==6.3.2
 cymem==2.0.6
 editdistance==0.6.0
 elastic-transport==8.1.0
