--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,112 @@
 absl-py==1.0.0
+apiwrapper==0.1.8
+appdirs==1.4.4
+astroid==2.11.1
 astunparse==1.6.3
 atomicwrites==1.4.0
 attrs==21.4.0
 beautifulsoup4==4.10.0
-blis==0.7.6
-cachetools==5.0.0
+black==20.8b1
+blis==0.7.5
+cachetools==4.2.4
 catalogue==2.0.6
 certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.0.4
+charset-normalizer==2.0.7
+click==8.0.3
 colorama==0.4.4
-coverage==6.3.2
 cymem==2.0.6
+dill==0.3.4
+docker==5.0.3
 editdistance==0.6.0
-elastic-transport==8.1.0
-elasticsearch==7.17.1
-elasticsearch-dsl==7.4.0
+elasticsearch==5.4.0
+elasticsearch-dsl==5.3.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0-py3-none-any.whl
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl
-flake8==4.0.1
-Flask==2.0.3
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.3.1/en_core_web_md-2.3.1.tar.gz
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+Flask==2.0.2
 flatbuffers==2.0
-gast==0.5.3
-google-auth==2.6.2
+fr-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-2.3.0/fr_core_news_lg-2.3.0.tar.gz
+gast==0.4.0
+google-auth==2.3.3
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.44.0
-h5py==3.6.0
+grpcio==1.41.1
+h5py==3.5.0
+here==0.1.0
+heroku==0.1.4
 idna==3.3
-importlib-metadata==4.11.3
 iniconfig==1.1.1
-itsdangerous==2.1.1
-Jinja2==3.0.3
-keras==2.8.0
+isort==5.10.1
+itsdangerous==2.0.1
+Jinja2==3.0.2
+keras==2.7.0
 Keras-Preprocessing==1.1.2
 langcodes==3.3.0
-libclang==13.0.0
-Markdown==3.3.6
-MarkupSafe==2.1.1
+lazy-object-proxy==1.7.1
+libclang==12.0.0
+Markdown==3.3.4
+MarkupSafe==2.0.1
 mccabe==0.7.0
-mordecai==2.1.0
 murmurhash==1.0.6
-mysql==0.0.3
-mysql-connector-python==8.0.28
-mysqlclient==2.1.0
-numpy==1.22.3
-oauthlib==3.2.0
+mypy-extensions==0.4.3
+mysql-connector-python==8.0.27
+numpy==1.21.4
+oauthlib==3.1.1
 opt-einsum==3.3.0
 packaging==21.3
-pandas==1.4.1
+pandas==1.3.4
+pathspec==0.9.0
 pathy==0.6.1
-plac==1.3.4
+plac==1.1.3
+platformdirs==2.5.1
 pluggy==1.0.0
+postgres==4.0
 preshed==3.0.6
-protobuf==3.19.4
-psycopg2==2.9.3
+protobuf==3.19.0
+psycopg2-binary==2.9.1
+psycopg2-pool==1.1
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.8.0
 pydantic==1.8.2
-pyflakes==2.4.0
-pyparsing==3.0.7
-pytest==7.1.1
-pytest-mock==3.7.0
-python-dateutil==2.8.2
+pylint==2.13.0
+pyparsing==3.0.6
+pytest==7.0.1
+python-dateutil==1.5
 pytz==2021.3
-requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
+pywin32==227
+regex==2021.10.23
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
 six==1.16.0
 smart-open==5.2.1
-soupsieve==2.3.1
-spacy==3.2.3
-spacy-legacy==3.0.9
+soupsieve==2.2.1
+spacy==3.2.0
+spacy-legacy==3.0.8
 spacy-loggers==1.0.1
 srsly==2.4.2
-tensorboard==2.8.0
+tensorboard==2.7.0
 tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-estimator==2.8.0
-tensorflow-io-gcs-filesystem==0.24.0
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.22.0
 termcolor==1.1.0
-tf-estimator-nightly==2.8.0.dev2021122109
-thinc==8.0.15
+thinc==8.0.13
 toml==0.10.2
 tomli==2.0.1
-tqdm==4.63.0
+tqdm==4.62.3
+traitlets==5.1.1
+typed-ast==1.4.3
 typer==0.4.0
-typing_extensions==4.1.1
-urllib3==1.26.9
-wasabi==0.9.0
-Werkzeug==2.0.3
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+wasabi==0.8.2
+wcwidth==0.2.5
+websocket-client==1.3.1
+Werkzeug==2.0.2
 wikipedia==1.4.0
 Wikipedia-API==0.5.4
-wrapt==1.14.0
-zipp==3.7.0
+wrapt==1.13.3
+xx-ent-wiki-sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-2.3.0/xx_ent_wiki_sm-2.3.0.tar.gz
