--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ google-auth==2.3.3
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.41.1
+gunicorn==20.1.0
 h5py==3.5.0
 here==0.1.0
 heroku==0.1.4
