--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.3
 colorama==0.4.4
+cycler==0.11.0
 cymem==2.0.6
 dill==0.3.4
 docker==5.0.3
@@ -21,11 +22,10 @@ editdistance==0.6.0
 elasticsearch==5.4.0
 elasticsearch-dsl==5.3.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0-py3-none-any.whl
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.3.1/en_core_web_md-2.3.1.tar.gz
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
-Flask==2.0.2
+flake8==4.0.1
+Flask==2.1.0
 flatbuffers==2.0
-fr-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-2.3.0/fr_core_news_lg-2.3.0.tar.gz
+fonttools==4.31.2
 gast==0.4.0
 google-auth==2.3.3
 google-auth-oauthlib==0.4.6
@@ -33,21 +33,21 @@ google-pasta==0.2.0
 grpcio==1.41.1
 gunicorn==20.1.0
 h5py==3.5.0
-here==0.1.0
-heroku==0.1.4
 idna==3.3
+importlib-metadata==4.11.3
 iniconfig==1.1.1
 isort==5.10.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
 keras==2.7.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
 langcodes==3.3.0
 lazy-object-proxy==1.7.1
 libclang==12.0.0
 Markdown==3.3.4
 MarkupSafe==2.0.1
-mccabe==0.7.0
+mccabe==0.6.1
 murmurhash==1.0.6
 mypy-extensions==0.4.3
 mysql-connector-python==8.0.27
@@ -58,6 +58,7 @@ packaging==21.3
 pandas==1.3.4
 pathspec==0.9.0
 pathy==0.6.1
+Pillow==9.0.1
 plac==1.1.3
 platformdirs==2.5.1
 pluggy==1.0.0
@@ -69,20 +70,21 @@ psycopg2-pool==1.1
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pydantic==1.8.2
+pyflakes==2.4.0
 pylint==2.13.0
 pyparsing==3.0.6
-pytest==7.0.1
-python-dateutil==1.5
+python-dotenv==0.20.0
 pytz==2021.3
 regex==2021.10.23
-requests==2.26.0
+requests==2.27.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.16.0
 smart-open==5.2.1
 soupsieve==2.2.1
-spacy==3.2.0
+spacy==3.2.4
 spacy-legacy==3.0.8
 spacy-loggers==1.0.1
 srsly==2.4.2
@@ -106,7 +108,5 @@ wasabi==0.8.2
 wcwidth==0.2.5
 websocket-client==1.3.1
 Werkzeug==2.0.2
-wikipedia==1.4.0
-Wikipedia-API==0.5.4
 wrapt==1.13.3
-xx-ent-wiki-sm @ https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-2.3.0/xx_ent_wiki_sm-2.3.0.tar.gz
+zipp==3.7.0
